--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,6 @@
     justify-content: center;
     align-items: center;
     border-radius: 8px;
-
-
     background: linear-gradient(to bottom, #dcd4c9 0%, #d6ccbd 100%);
     box-shadow: -10px -10px 10px #f3efec,
         13px 13px 15px #9a8f7c,
@@ -38,33 +36,32 @@
     position: relative;
 }
 
-.added_cv {
+.cv_link {
     width: 85%;
     height: 70%;
+}
+
+.added_cv {
+    width: 100%;
+    height: 100%;
     color: #f1ebe5;
     background: #f1ebe5;
     text-shadow: 0 5px 5px #847966, 0px -2px 1px #fff;
     font-size: 30px;
     font-weight: bold;
     border-radius: 8px;
-    border: 1px solid white;
+    border: none;
     cursor: pointer;
-    box-shadow: -2px -2px 7px #bdb5ad,
-        2px 2px 7px #bdb5ad;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: 1s ease;
+    /* box-shadow: -2px -2px 7px #bdb5ad,
+        2px 2px 7px #bdb5ad; */
+    box-shadow: inset -5px -5px 7px #bdb5ad,
+        inset 5px 5px 7px #fff;
 }
 
-
-.added_cv:hover {
-    left: 43%;
+.added_cv:active {
+    text-shadow: 0 1px 1px #847966;
+    box-shadow: -10px -10px 10px #f3efec,
+        13px 13px 15px #9a8f7c,
+        inset -5px -5px 5px #f1eeea,
+        inset 5px 5px 5px #9a8f7c;
 }
-
-
-
-
-
-
